[package]
name = "example_twitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
neotwitch = { git = "https://github.com/togglebyte/neotwitch", features = ["tokio-rt"] }
pretty_env_logger = "0.4.0"
serde_json = "1.0.72"
tinyroute = { git = "https://github.com/togglebyte/tinyroute", features = ["tokio-rt"] }
tokio = { version = "1.14.0", features = ["full"] }
